--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -45,3 +45,11 @@ components:
   name: orderSelection_radio
   layout_properties: {column: YFVFNN}
   event_bindings: {clicked: orderSelection_radio_clicked}
+- type: Button
+  properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: comment, font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: ''}
+  name: button_1
+  layout_properties: {column: FUNZSD}
+  event_bindings: {click: comment_click}
