--- a/client_code/Mainpage/Modal/form_template.yaml
+++ b/client_code/Mainpage/Modal/form_template.yaml
@@ -11,44 +11,33 @@ components:
   components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: 'Job ID :', font_size: 14, font: '', spacing_above: small,
+      visible: true, text: Comment History, font_size: 14, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
       underline: false, icon: ''}
     name: job_id
-    layout_properties: {grid_position: 'WPIIWL,GCILUJ'}
+    layout_properties: {grid_position: 'RYDJVG,QFIVOG'}
     data_bindings:
-    - {property: text, code: '"Job ID: "'}
+    - {property: text, code: '"Comment History"'}
+  - type: RepeatingPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
+      background: ''}
+    name: action_panel
+    layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Add Comment, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'BFWMFL,EQLBOU'}
   - type: TextArea
     properties: {role: outlined, align: left, height: '', tooltip: '', placeholder: Add comment,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 10,
       auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
       background: '', bold: false, underline: false}
     name: addcomment
-    layout_properties: {grid_position: 'WCBCNH,FXVJGA'}
-  - type: DropDown
-    properties:
-      role: outlined
-      align: full
-      tooltip: ''
-      placeholder: Status
-      border: ''
-      enabled: true
-      foreground: ''
-      items: []
-      visible: true
-      font_size: 11
-      font: ''
-      spacing_above: small
-      spacing_below: small
-      italic: false
-      background: ''
-      bold: false
-      underline: false
-      include_placeholder: true
-    name: dd_status
-    layout_properties: {grid_position: 'EFUDBX,MLPLWE', full_width_row: false}
-    data_bindings:
-    - {property: items, code: self.esc_status}
+    layout_properties: {grid_position: 'CUIXOC,IGOVBD'}
   - type: DropDown
     properties:
       role: outlined
@@ -70,21 +59,39 @@ components:
       underline: false
       include_placeholder: true
     name: dd_assign
-    layout_properties: {grid_position: 'EFUDBX,DIPKCH', full_width_row: false}
+    layout_properties: {grid_position: 'URBKQF,VGVPER', full_width_row: false}
     data_bindings:
     - {property: items, code: self.assigned}
+  - type: DropDown
+    properties:
+      role: outlined
+      align: full
+      tooltip: ''
+      placeholder: Status
+      border: ''
+      enabled: true
+      foreground: ''
+      items: []
+      visible: true
+      font_size: 11
+      font: ''
+      spacing_above: small
+      spacing_below: small
+      italic: false
+      background: ''
+      bold: false
+      underline: false
+      include_placeholder: true
+    name: dd_status
+    layout_properties: {grid_position: 'URBKQF,LVPONH', full_width_row: false}
+    data_bindings:
+    - {property: items, code: self.esc_status}
   - type: Button
     properties: {role: elevated-button, align: center, tooltip: '', border: '', enabled: true,
       foreground: '', visible: true, text: Submit, font_size: 11, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
       underline: false, icon: ''}
     name: submit
-    layout_properties: {grid_position: 'YAAKUB,MQBVGO'}
+    layout_properties: {grid_position: 'URBKQF,OWLQFG', full_width_row: false}
     event_bindings: {click: submit_button_click}
-  - type: RepeatingPanel
-    properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
-      background: ''}
-    name: m_action_panel
-    layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
 is_package: true
