Created Mainpage.ActionPage.Actionlog; Edited Mainpage.Mainpage.RowTemplate1, Mainpage.Mainpage and Mainpage.ActionPage; Deleted Mainpage.Actionlog

--- a/client_code/Mainpage/ActionPage/form_template.yaml
+++ b/client_code/Mainpage/ActionPage/form_template.yaml
@@ -81,7 +81,7 @@ components:
   components:
   - type: RepeatingPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
+      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.ActionPage.Actionlog,
       background: ''}
     name: action_panel
     layout_properties:
