--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -473,7 +473,7 @@ components:
     event_bindings: {click: submit_button_click}
   - type: RepeatingPanel
     properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Actionlog,
+      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.ActionPage.Actionlog,
       background: ''}
     name: action_panel
     layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
