--- a/client_code/Mainpage/Modal/form_template.yaml
+++ b/client_code/Mainpage/Modal/form_template.yaml
@@ -11,33 +11,18 @@ components:
   components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Comment History, font_size: 14, font: '', spacing_above: small,
+      visible: true, text: Add Comment, font_size: null, font: '14', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
       underline: false, icon: ''}
-    name: job_id
-    layout_properties: {grid_position: 'RYDJVG,QFIVOG'}
-    data_bindings:
-    - {property: text, code: '"Comment History"'}
-  - type: RepeatingPanel
-    properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
-      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Modal.Actionlog,
-      background: ''}
-    name: action_panel
-    layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: Add Comment, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
     name: label_1
-    layout_properties: {grid_position: 'BFWMFL,EQLBOU'}
+    layout_properties: {grid_position: 'JGLXYX,NQVALS'}
   - type: TextArea
-    properties: {role: outlined, align: left, height: '', tooltip: '', placeholder: Add comment,
+    properties: {role: outlined, align: left, height: '', tooltip: '', placeholder: Enter text here,
       border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 10,
-      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
+      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: true,
       background: '', bold: false, underline: false}
     name: addcomment
-    layout_properties: {grid_position: 'CUIXOC,IGOVBD'}
+    layout_properties: {grid_position: 'ZMRGEF,UBVMMR'}
   - type: DropDown
     properties:
       role: outlined
@@ -59,7 +44,7 @@ components:
       underline: false
       include_placeholder: true
     name: dd_assign
-    layout_properties: {grid_position: 'URBKQF,VGVPER', full_width_row: false}
+    layout_properties: {grid_position: 'MDQQNV,GWPPUK', full_width_row: false}
     data_bindings:
     - {property: items, code: self.assigned}
   - type: DropDown
@@ -83,7 +68,22 @@ components:
       underline: false
       include_placeholder: true
     name: dd_status
-    layout_properties: {grid_position: 'URBKQF,LVPONH', full_width_row: false}
+    layout_properties: {grid_position: 'MDQQNV,VFJXTA', full_width_row: false}
     data_bindings:
     - {property: items, code: self.esc_status}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Comment History, font_size: 14, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+      underline: false, icon: ''}
+    name: job_id
+    layout_properties: {grid_position: 'RYDJVG,QFIVOG'}
+    data_bindings:
+    - {property: text, code: '"Comment History"'}
+  - type: RepeatingPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', items: null,
+      visible: true, spacing_above: small, spacing_below: small, item_template: Mainpage.Modal.Actionlog,
+      background: ''}
+    name: action_panel
+    layout_properties: {grid_position: 'BKXZMM,ACHLBH'}
 is_package: true
