--- a/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/RowTemplate1/form_template.yaml
@@ -6,10 +6,10 @@ container:
     italic: false, background: '', bold: false, underline: false}
 components:
 - type: Button
-  properties: {role: tonal-button, align: center, tooltip: '', border: '', enabled: true,
-    foreground: '', visible: true, text: '', font_size: 11, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: ''}
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: '', font_size: 11, font: '', spacing_above: small, icon_align: top,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
   layout_properties: {column: YBLVEX, grid_position: 'BCKGJB,RVLWDI'}
   event_bindings: {click: jobreport_click}
   name: jobreport
@@ -38,9 +38,9 @@ components:
   - {code: 'self.item[''latest_status''][''name'']', property: text}
   name: label_4
 - type: Button
-  properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
     foreground: '', visible: true, text: '', font_size: null, font: '11', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    icon_align: top, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   layout_properties: {column: FUNZSD}
   event_bindings: {click: comment_click}
