--- a/client_code/Mainpage/Mainpage/form_template.yaml
+++ b/client_code/Mainpage/Mainpage/form_template.yaml
@@ -4,8 +4,8 @@ container:
   properties: {col_widths: '{"JKBNWB":59}'}
 components:
 - type: Button
-  properties: {role: elevated-button, align: right, tooltip: '', border: '', enabled: true,
-    foreground: '', visible: true, text: log out, font_size: null, font: '', spacing_above: small,
+  properties: {role: null, align: right, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: log out, font_size: null, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   layout_properties: {grid_position: 'HWESZE,STEZAR'}
@@ -27,8 +27,8 @@ components:
     name: grid_panel_1
     components:
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Start Date, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Start Date, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -37,7 +37,7 @@ components:
         row: FSHRWD
         width_xs: 1
         col_xs: 0
-        width: 53.3281
+        width: 27.7708
       name: startdate
     - type: DatePicker
       properties: {role: outlined, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -49,7 +49,7 @@ components:
         col_widths: {}
         grid_position: RZBXLA,PIZDUB
         row: FSHRWD
-        width_xs: 2
+        width_xs: 1
         col_xs: 1
         width: 136.656
       data_bindings:
@@ -57,8 +57,8 @@ components:
       event_bindings: {change: filter_change}
       name: start_date_picker
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: End Date, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: End Date, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -67,6 +67,7 @@ components:
         row: FSHRWD
         width_xs: 1
         col_xs: 2
+        width: 27.7708
       name: enddate
     - type: DatePicker
       properties: {role: outlined, align: left, max_date: '', pick_time: false, tooltip: '',
@@ -78,16 +79,16 @@ components:
         col_widths: {}
         grid_position: JOFSIP,YDQDGU
         row: FSHRWD
-        width_xs: 2
+        width_xs: 1
         col_xs: 3
-        width: 136.656
+        width: 85.5521
       data_bindings:
       - {code: 'self.date_filters[''end'']', writeback: true, property: date}
       event_bindings: {change: filter_change}
       name: end_date_picker
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Merchant Portal, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Merchant Portal, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -96,6 +97,7 @@ components:
         row: FSHRWD
         width_xs: 1
         col_xs: 4
+        width: 27.7708
       name: merchant
     - type: DropDown
       properties:
@@ -121,17 +123,17 @@ components:
         col_widths: {}
         grid_position: EMXCMF,TSKJLG
         row: FSHRWD
-        width_xs: 2
+        width_xs: 1
         col_xs: 5
-        width: 136.656
+        width: 66.6562
       data_bindings:
       - {code: self.merchant_name, property: items}
       - {code: 'self.filters[''merchant_name'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_merchant
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Assigned To, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Assigned To, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -140,6 +142,7 @@ components:
         row: FSHRWD
         width_xs: 1
         col_xs: 6
+        width: 27.7708
       name: label_1_copy_2
     - type: DropDown
       properties:
@@ -165,17 +168,17 @@ components:
         col_widths: {}
         grid_position: XXIQOH,CMUKOB
         row: FSHRWD
-        width_xs: 2
+        width_xs: 1
         col_xs: 7
-        width: 136.656
+        width: 66.6562
       data_bindings:
       - {code: self.users, property: items}
       - {code: 'self.filters[''users'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_assigned
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Job Status, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Job Status, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -184,6 +187,7 @@ components:
         row: PKQKNH
         width_xs: 1
         col_xs: 0
+        width: 27.7708
       name: label_1_copy_3
     - type: DropDown
       properties:
@@ -209,17 +213,17 @@ components:
         col_widths: {}
         grid_position: XKXRFX,BSIHTO
         row: PKQKNH
-        width_xs: 2
+        width_xs: 1
         col_xs: 1
-        width: 136.656
+        width: 66.6562
       data_bindings:
       - {code: self.job_status, property: items}
       - {code: 'self.filters[''job_status'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_job_status
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Completion Code, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Completion Code, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -228,6 +232,7 @@ components:
         row: PKQKNH
         width_xs: 1
         col_xs: 2
+        width: 27.7708
       name: label_2
     - type: DropDown
       properties:
@@ -253,14 +258,14 @@ components:
         col_widths: {}
         grid_position: QAXRSU,BLDEFZ
         row: PKQKNH
-        width_xs: 2
+        width_xs: 1
         col_xs: 3
-        width: 136.656
+        width: 66.6562
       event_bindings: {change: filter_change}
       name: dd_completion_code
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Escalation Type, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Escalation Type, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -269,6 +274,7 @@ components:
         row: PKQKNH
         width_xs: 1
         col_xs: 0
+        width: 27.7708
       name: label_2_copy
     - type: DropDown
       properties:
@@ -294,17 +300,17 @@ components:
         col_widths: {}
         grid_position: RYQXQU,BGAQBK
         row: PKQKNH
-        width_xs: 2
+        width_xs: 1
         col_xs: 1
-        width: 136.656
+        width: 66.6562
       data_bindings:
       - {code: self.esc_type, property: items}
       - {code: 'self.filters[''esc_type'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_esc_type
     - type: Label
-      properties: {role: null, align: right, tooltip: '', border: '', foreground: '',
-        visible: true, text: Escalation Status, font_size: 12, font: '', spacing_above: small,
+      properties: {role: null, align: right, tooltip: '', border: '', foreground: 'theme:Outline',
+        visible: true, text: Escalation Status, font_size: 12, font: '', spacing_above: none,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       layout_properties:
@@ -313,6 +319,7 @@ components:
         row: PKQKNH
         width_xs: 1
         col_xs: 2
+        width: 27.7708
       name: label_2_copy_2
     - type: DropDown
       properties:
@@ -338,9 +345,9 @@ components:
         col_widths: {}
         grid_position: AXXCLW,RLIILH
         row: PKQKNH
-        width_xs: 2
+        width_xs: 1
         col_xs: 3
-        width: 136.656
+        width: 66.6562
       data_bindings:
       - {code: self.esc_status, property: items}
       - {code: 'self.filters[''esc_status'']', writeback: true, property: selected_value}
@@ -375,7 +382,7 @@ components:
       spacing_above: small
       spacing_below: small
       background: ''
-    layout_properties: {width: 970, row: BEEIKG, width_xs: 12, col_xs: 0}
+    layout_properties: {width: 661.9996659999999, row: BEEIKG, width_xs: 12, col_xs: 0}
     name: data_grid_1
     components:
     - type: RepeatingPanel
