--- a/client_code/Mainpage/Modal/form_template.yaml
+++ b/client_code/Mainpage/Modal/form_template.yaml
@@ -15,81 +15,88 @@ components:
       icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
       underline: false, icon: ''}
     name: label_1
-    layout_properties: {grid_position: 'JGLXYX,NQVALS'}
-  - type: TextArea
-    properties: {role: outlined, align: left, height: '', tooltip: '', placeholder: Enter text here,
-      border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 10,
-      auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: true,
-      background: '', bold: false, underline: false}
-    name: addcomment
-    layout_properties: {grid_position: 'ZMRGEF,UBVMMR'}
-    event_bindings: {}
-  - type: DropDown
-    properties:
-      role: outlined
-      align: full
-      tooltip: ''
-      placeholder: Assign
-      border: ''
-      enabled: true
-      foreground: ''
-      items: []
-      visible: true
-      font_size: 11
-      font: ''
-      spacing_above: small
-      spacing_below: small
-      italic: false
-      background: ''
-      bold: false
-      underline: false
-      include_placeholder: true
-    name: dd_assign
-    layout_properties: {grid_position: 'MDQQNV,GWPPUK', full_width_row: false}
-    data_bindings:
-    - {property: items, code: self.assigned}
-    event_bindings: {}
-  - type: DropDown
-    properties:
-      role: outlined
-      align: full
-      tooltip: ''
-      placeholder: Status
-      border: ''
-      enabled: true
-      foreground: ''
-      items: []
-      visible: true
-      font_size: 11
-      font: ''
-      spacing_above: small
-      spacing_below: small
-      italic: false
-      background: ''
-      bold: false
-      underline: false
-      include_placeholder: true
-    name: dd_status
-    layout_properties: {grid_position: 'MDQQNV,VFJXTA', full_width_row: false}
-    data_bindings:
-    - {property: items, code: self.esc_status}
-    event_bindings: {}
-  - type: Button
-    properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Submit, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: submit_button
-    layout_properties: {grid_position: 'OQUJXT,NDYRZW', full_width_row: false}
-    event_bindings: {click: submit_button_click}
-  - type: Button
-    properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: Clear, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: clear_button
-    layout_properties: {grid_position: 'OQUJXT,NGBDYK', full_width_row: false}
-    event_bindings: {click: clear_button_click}
+    layout_properties: {grid_position: 'KTJXJG,YWNEHA'}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_2
+    layout_properties: {grid_position: 'PCBSQW,FKYJQQ'}
+    components:
+    - type: TextArea
+      properties: {role: outlined, align: left, height: '', tooltip: '', placeholder: Enter text here,
+        border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 10,
+        auto_expand: false, font: '', spacing_above: small, spacing_below: small,
+        italic: true, background: '', bold: false, underline: false}
+      name: addcomment
+      layout_properties: {grid_position: 'SGYDHC,RHZYQP'}
+      event_bindings: {}
+    - type: DropDown
+      properties:
+        role: outlined
+        align: full
+        tooltip: ''
+        placeholder: Assign
+        border: ''
+        enabled: true
+        foreground: ''
+        items: []
+        visible: true
+        font_size: 11
+        font: ''
+        spacing_above: small
+        spacing_below: small
+        italic: false
+        background: ''
+        bold: false
+        underline: false
+        include_placeholder: true
+      name: dd_assign
+      layout_properties: {grid_position: 'QOREGC,LYOKLQ', full_width_row: false}
+      data_bindings:
+      - {property: items, code: self.assigned}
+      event_bindings: {}
+    - type: DropDown
+      properties:
+        role: outlined
+        align: full
+        tooltip: ''
+        placeholder: Status
+        border: ''
+        enabled: true
+        foreground: ''
+        items: []
+        visible: true
+        font_size: 11
+        font: ''
+        spacing_above: small
+        spacing_below: small
+        italic: false
+        background: ''
+        bold: false
+        underline: false
+        include_placeholder: true
+      name: dd_status
+      layout_properties: {grid_position: 'QOREGC,PDZZVB', full_width_row: false}
+      data_bindings:
+      - {property: items, code: self.esc_status}
+      event_bindings: {}
+    - type: Button
+      properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Submit, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: submit_button
+      layout_properties: {grid_position: 'PJAOAY,WMCWJF', full_width_row: false}
+      event_bindings: {click: submit_button_click}
+    - type: Button
+      properties: {role: null, align: full, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Clear, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: clear_button
+      layout_properties: {grid_position: 'PJAOAY,VUPUHS', full_width_row: false}
+      event_bindings: {click: clear_button_click}
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
       visible: true, text: Comment History, font_size: 14, font: '', spacing_above: small,
